Automatically regenerating files when a .data file is modified, but it doesn't work when there is compiler error